overflow fix for pages

--- a/style.css
+++ b/style.css
@@ -44,7 +44,8 @@ body {
   display: flex;
   flex-flow: column;
   flex-wrap: nowrap;
-  flex-grow: 1; }
+  flex-grow: 1;
+  max-width: 100%; }
 
 .site > * {
   width: 100%; }
